# wxmaxima

./: .appveyor.yml  .gitmodules  .travis.yml  CMakeLists.txt  ChangeLog
.github/crosscompile-windows/: CMakeLists.txt  CMakeLists.txt~  README.txt  wine-clisp.sh.tmpl
.github/crosscompile-windows/wxmaxima/: CMakeLists.txt
.github/workflows/: compile_mac.yml  compile_windows.yml
data/: wxMathML.h  wxMathML.lisp
src/: Autocomplete.cpp  Autocomplete.h  CMakeLists.txt  CharButton.cpp  CharButton.h  ConfigDialogue.cpp  ConfigDialogue.h  Configuration.cpp  Configuration.h  Image.cpp  Image.h  ImgCell.h  LoggingMessageDialog.cpp  LoggingMessageDialog.h  MathParser.cpp  MathParser.h  MaximaTokenizer.cpp  MaximaTokenizer.h  RegexCtrl.cpp  RegexCtrl.h  Resources.rc.in  SlideShowCell.h  StatusBar.cpp  StatusBar.h  SvgBitmap.cpp  SvgBitmap.h  TableOfContents.cpp  TableOfContents.h  TipOfTheDay.cpp  ToolBar.cpp  ToolBar.h  VariablesPane.cpp  VariablesPane.h  Worksheet.cpp  Worksheet.h  WrappingStaticText.cpp  WrappingStaticText.h  XmlInspector.cpp  XmlInspector.h  embed_wxmathml.cmake  (+7 more)
src/cells/: AbsCell.cpp  AbsCell.h  AtCell.cpp  AtCell.h  Cell.cpp  Cell.h  CellImpl.h  CellList.cpp  CellList.h  ConjugateCell.cpp  ConjugateCell.h  DiffCell.cpp  DiffCell.h  DigitCell.cpp  DigitCell.h  EditorCell.cpp  EditorCell.h  ExptCell.cpp  ExptCell.h  FracCell.cpp  FracCell.h  FunCell.cpp  FunCell.h  GroupCell.cpp  GroupCell.h  ImgCell.cpp  ImgCell.h  ImgCellBase.h  IntCell.cpp  IntCell.h  IntervalCell.cpp  IntervalCell.h  LabelCell.cpp  LabelCell.h  LimitCell.cpp  LimitCell.h  ListCell.cpp  ListCell.h  LongNumberCell.cpp  LongNumberCell.h  (+20 more)
src/graphical_io/: BitmapOut.cpp  BitmapOut.h  OutCommon.cpp  OutCommon.h  Printout.cpp  Printout.h  SVGout.cpp  SVGout.h
test/: testbench_simple.wxmx
test/automatic_test_files/: intervals.wxm
test/catch2/: catch.hpp
test/unit_tests/: TestStubs.cpp  test_AFontSize.cpp  test_CellPtr.cpp  test_ImgCell.cpp  test_SqrtCell.cpp
